@@ -41,6 +41,13 @@ public class InetAddressType extends AbstractType<InetAddress>
 
     InetAddressType() {super(ComparisonType.BYTE_ORDER);} // singleton
 
+    @Override
+    public boolean allowsEmpty()
+    {
+        return true;
+    }
+
+    @Override
     public boolean isEmptyValueMeaningless()
     {
         return true;
